--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # Java class files
 *.class
 
+app/build/
 # Generated files
 bin/
 gen/
@@ -16,6 +17,7 @@ out/
 # Gradle files
 .gradle/
 build/
+.idea/
 
 # Local configuration file (sdk path, etc)
 local.properties
